--- a/css/button-store.css
+++ b/css/button-store.css
@@ -1,5 +1,6 @@
 .button-store {
   display: inline-block;
+  box-sizing: border-box;
   background-color: #252c41;
   font-size: 20px;
   color: #fff;
@@ -10,4 +11,11 @@
   margin-right: 0;
   text-align: center;
   text-decoration: none;
+}
+
+.button-store.-second {
+  background-color: transparent;
+  border: 2px solid #fff;
+  height: 60px;
+  line-height: 56px;
 }
