--- a/css/container-store.css
+++ b/css/container-store.css
@@ -3,7 +3,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 55px 60px 95px;
-  width: 80%;
+  padding: 55px 60px 165px 0;
+  width: 90%;
   transform: translateX(-50%) translateY(-50%);
 }
