--- a/css/description-product.css
+++ b/css/description-product.css
@@ -21,14 +21,17 @@
   cursor: pointer;
 }
 
-.description-product > .item.-heart:hover {
-  transform: scale(1.5);
-  /* transition: all 300mx linear; */
-}
-
 .description-product > .item.-star {
   margin-bottom: 10px;
   cursor: pointer;
+}
+
+.description-product .icon {
+  transition: transform 100ms linear;
+}
+
+.description-product .icon:hover {
+  transform: scale(1.2);
 }
 
 .description-product > .item.-star + .item {
